add headers and buttons to html, comment out for loop in js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <script src="javascript.js"></script>
 </head>
 <body>
+    <section>
+        <h1>Rock Paper Scissors</h1>
+        <h4>SAISHOU WA GU</h4>
+        <h5>Jan... Ken... GUUUU!</h5>
+    </section>
 
+    <section>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </section>
 
 
 
