--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
 </head>
 <body>
     <section>
@@ -13,11 +13,23 @@
     </section>
 
     <section>
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
     </section>
 
+    <section class="score">
+        <div class="player-score">
+            Player: <span></span>
+
+        </div>
+
+        <div class="computer-score">
+            Computer:<span></span>
+        </div>
+
+        <div class="result"></div>
+    </section>
 
 
 
