--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
     </section>
 
     <section>
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
     </section>
 
     <section class="score">
-        <div class="player-score">
-            Player: <span></span>
-
-        </div>
+        <p>Player: <a id="player-score">0</a></p>
 
         <div class="computer-score">
-            Computer:<span></span>
+            Computer:<span class="score-2-2"></span>
         </div>
 
         <div class="result"></div>
