rps game works, score works

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Player: <a id="player-score">0</a></p>
 
         <div class="computer-score">
-            Computer:<span class="score-2-2"></span>
+        <p>Computer: <a id="computer-score">0</a></p>
         </div>
 
         <div class="result"></div>
