create computer chose section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <button class="btn" id="scissors">Scissors</button>
     </section>
 
+    <section>
+        <div>Computer chose: <a id="computer-choice">n/a</a></div>
+    </section>
+
     <section class="score">
         <p>Player: <a id="player-score">0</a></p>
 
